fixed hp z-index bug

--- a/POLMED/src/components/nav/style.scss
+++ b/POLMED/src/components/nav/style.scss
@@ -14,6 +14,7 @@
   padding: 0.5em 0;
   background-color: transparent;
   width: 100%;
+  z-index: 1;
 }
 
 .nav-logo {
