--- a/POLMED/src/pages/home/styles/style.scss
+++ b/POLMED/src/pages/home/styles/style.scss
@@ -1,7 +1,7 @@
 @import "../../../styles/global-styles";
 
 .hp {
-  z-index: -1;
+  z-index: 0;
   position: absolute;
   top: 0;
   height: fit-content;
